<resources>
    <string name="app_name">Sound Zones</string>
    <string name="fab_content_desc">Create Sound Zones</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="private_zone">Private Zone</string>
    <string name="mixed_zone">Mixed Zone</string>
    <string name="social_zone">Social Zone</string>
    <string name="select_sound_zone_type">Select sound zone type</string>
    <string name="type">Type</string>
    <string name="shape">Shape</string>
    <string name="select_sound_zone_shape">Select sound zone shape</string>
    <string name="dome">Dome</string>
    <string name="egg">Egg</string>
    <string name="orb">Orb</string>
    <string name="abstract_entity">Abstract Entity</string>
    <string name="private_string">Private</string>
    <string name="mixed">Mixed</string>
    <string name="social">Social</string>
    <string name="private_help">A private sound zone is for those who want a private soundscape.</string>
    <string name="public_help">A public zone is the sound zone for sharing media with others.</string>
    <string name="mixed_help">A mixed sound zone is a combination of public and private</string>
    <string name="swap_target">Swap target</string>


</resources>