<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".type_fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Help"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/shapeMenuBack"
                android:layout_width="50dp"
                android:layout_height="wrap_content"

                android:background="@color/white"
                android:scaleX="2"
                android:scaleY="2"
                android:src="@drawable/ic_baseline_keyboard_backspace_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/SelectPrivateButton"
                    android:clickable="false"
                    android:checkable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/black"
                    app:cardElevation="2dp"
                    android:layout_marginRight="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/private_string"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center_horizontal"
                            android:adjustViewBounds="true"
                            android:src="@mipmap/ic_dome_c1" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:textAlignment="center"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/private_help"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:textSize="17sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/SelectMixedButton"
                    android:clickable="false"
                    android:checkable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/black"
                    app:cardElevation="2dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mixed"
                            android:layout_gravity="center_horizontal"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:adjustViewBounds="true"
                            android:layout_gravity="center_horizontal"
                            android:src="@mipmap/ic_dome_c2"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:textAlignment="center"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/mixed_help"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:textSize="17sp" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>



            <com.google.android.material.card.MaterialCardView
                android:id="@+id/SelectSocialButton"
                android:clickable="false"
                android:focusable="false"
                android:checkable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:strokeWidth="1dp"
                app:strokeColor="@color/black"
                app:cardElevation="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/social"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:adjustViewBounds="true"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/ic_dome_c3"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/public_help"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textSize="17sp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

</androidx.core.widget.NestedScrollView>